--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,4 @@
 azalea {
-    redis-uri="http://127.0.0.1:6379"
+    redis-uri="http://redis:6379"
+    port="0" # Default - have OS assign the port
 }
