--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 azalea {
     redis-uri="http://redis:6379"
-    heartbeat-interval-ms="1000"
-    prune-interval-ms="3000"
+    heartbeat-interval-ms="500"
+    fail-interval-ms="5000"
 }
