--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,4 +2,6 @@ azalea {
     redis-uri="http://redis:6379"
     heartbeat-interval-ms="500"
     fail-interval-ms="5000"
+    update-table-timeout-ms="1000"
+    strict="false"
 }
